--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: lts/*
+          registry-url: 'https://registry.npmjs.org/'
+          always-auth: true
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
