--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -7,15 +7,10 @@ on:
 
 jobs:
   release:
-    - name: Log env
-      run: |
-        echo "NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}"
-        echo "NPM_TOKEN: ${{ secrets.NPM_TOKEN }}"
-        echo "REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}"
-
-    - uses: sxzz/workflows/.github/workflows/release.yml@v1
-      with:
-        publish: true
-      permissions:
-        contents: write
-        id-token: write
+    uses: sxzz/workflows/.github/workflows/release.yml@v1
+    secrets: inherit
+    with:
+      publish: true
+    permissions:
+      contents: write
+      id-token: write
