--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -10,6 +10,7 @@ jobs:
     uses: sxzz/workflows/.github/workflows/release.yml@v1
     secrets: inherit
     with:
+      build: 'pnpm build'
       publish: true
     permissions:
       contents: write
