--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -53,7 +53,9 @@ jobs:
       - name: Publish to NPM
         env:
           NODE_AUTH_TOKEN: '' # Clear placeholder set by setup-node to enable OIDC
-        run: pnpm -r publish --access public --no-git-checks
+        run: |
+          unset NODE_AUTH_TOKEN # Unset the default token set by "actions/setup-node" to get OIDC publishing working
+          pnpm -r publish --access public --no-git-checks
 
       - run: npx changelogithub
         env:
