--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: lts/*
+          scope: '@debbl'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -52,10 +53,11 @@ jobs:
 
       - name: Publish to NPM
         env:
+          NPM_CONFIG_PROVENANCE: 'true'
           NODE_AUTH_TOKEN: '' # Clear placeholder set by setup-node to enable OIDC
         run: |
           unset NODE_AUTH_TOKEN # Unset the default token set by "actions/setup-node" to get OIDC publishing working
-          pnpm -r publish --access public --no-git-checks
+          pnpm -r publish --access public --no-git-checks --provenance
 
       - run: npx changelogithub
         env:
