--- a/.github/workflows/realese.yml
+++ b/.github/workflows/realese.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Set node
         uses: actions/setup-node@v6
         with:
-          node-version: lts/*
+          node-version: 24
+          registry-url: 'https://registry.npmjs.org'
           scope: '@debbl'
 
       - name: Install pnpm
@@ -52,11 +53,8 @@ jobs:
         run: nr build
 
       - name: Publish to NPM
-        env:
-          NPM_CONFIG_PROVENANCE: 'true'
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_READ_TOKEN }}
         run: |
-          pnpm -r publish --access public --no-git-checks --provenance
+          NODE_AUTH_TOKEN="" pnpm -r publish --access public --no-git-checks
 
       - run: npx changelogithub
         env:
