--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "Brendan Dash <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
   "homepage": "https://github.com/Debbl/eslint-config",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Debbl/eslint-config.git"
+  },
   "keywords": [
     "eslint-config",
     "eslint-flat-config",
