--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@debbl/eslint-config",
   "type": "module",
   "version": "3.14.35",
-  "packageManager": "pnpm@10.28.0",
+  "packageManager": "pnpm@10.28.2",
   "description": "Brendan Dash's ESLint config",
   "author": "Brendan Dash <me@aiwan.run> (https://github.com/Debbl/)",
   "license": "MIT",
@@ -41,53 +41,53 @@
   },
   "dependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.6.0",
-    "@eslint-react/eslint-plugin": "^2.7.0",
+    "@eslint-react/eslint-plugin": "^2.9.4",
     "@eslint/markdown": "^7.5.1",
-    "@next/eslint-plugin-next": "^16.1.2",
-    "@typescript-eslint/eslint-plugin": "^8.53.0",
-    "@typescript-eslint/parser": "^8.53.0",
+    "@next/eslint-plugin-next": "^16.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitest/eslint-plugin": "^1.6.6",
     "eslint-config-flat-gitignore": "^2.1.0",
-    "eslint-plugin-better-tailwindcss": "^4.0.1",
+    "eslint-plugin-better-tailwindcss": "^4.1.1",
     "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-jsdoc": "^62.0.0",
+    "eslint-plugin-jsdoc": "^62.5.0",
     "eslint-plugin-jsonc": "^2.21.0",
     "eslint-plugin-n": "^17.23.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-perfectionist": "^5.3.1",
+    "eslint-plugin-perfectionist": "^5.4.0",
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react-compiler": "latest",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.26",
+    "eslint-plugin-react-refresh": "^0.5.0",
     "eslint-plugin-solid": "^0.14.5",
-    "eslint-plugin-toml": "^1.0.0",
+    "eslint-plugin-toml": "^1.0.3",
     "eslint-plugin-unicorn": "^62.0.0",
     "eslint-plugin-unused-imports": "^4.3.0",
-    "eslint-plugin-vue": "^10.6.2",
-    "eslint-plugin-yml": "^1.19.1",
-    "globals": "^17.0.0",
+    "eslint-plugin-vue": "^10.7.0",
+    "eslint-plugin-yml": "^3.0.0",
+    "globals": "^17.3.0",
     "jsonc-eslint-parser": "^2.4.2",
-    "prettier": "^3.8.0",
+    "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "toml-eslint-parser": "^1.0.2",
+    "toml-eslint-parser": "^1.0.3",
     "vue-eslint-parser": "^10.2.0",
-    "yaml-eslint-parser": "^1.3.2"
+    "yaml-eslint-parser": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/config-inspector": "^1.4.2",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^25.0.9",
-    "@types/react": "^19.2.8",
+    "@types/node": "^25.2.0",
+    "@types/react": "^19.2.10",
     "bumpp": "^10.4.0",
     "eslint": "^9.39.2",
     "execa": "^9.6.1",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.3",
-    "react": "^19.2.3",
+    "react": "^19.2.4",
     "sucrase": "^3.35.1",
-    "tsdown": "^0.20.0-beta.3",
+    "tsdown": "^0.20.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.18"
   }
 }
